--- a/posts/package.json
+++ b/posts/package.json
@@ -9,6 +9,7 @@
   "author": "Nhom 4",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "kafka-node": "^5.0.0"
   }
 }
