--- a/crawler/package.json
+++ b/crawler/package.json
@@ -15,10 +15,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fetch": "^1.1.0",
     "kafka-node": "^5.0.0",
     "mongoose": "^6.1.1",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.0",
+    "node-fetch": "^3.1.0",
     "nodemon": "^2.0.15",
     "request": "^2.88.2"
   }
