--- a/comments/package.json
+++ b/comments/package.json
@@ -1,11 +1,18 @@
 {
   "name": "comments-service",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js"
   },
   "author": "Nhom 4",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "kafka-node": "^5.0.0",
+    "mongoose": "^6.1.1",
+    "nodemon": "^2.0.15"
+  }
 }
