--- a/crawler/package.json
+++ b/crawler/package.json
@@ -14,6 +14,7 @@
     "kafka-node": "^5.0.0",
     "node-cron": "^3.0.0",
     "nodemon": "^2.0.15",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "slugify": "^1.6.3"
   }
 }
