--- a/users/.env
+++ b/users/.env
@@ -1,5 +1,6 @@
-MONGO_URL=mongodb+srv://tranquochuy221096:newsweb@cluster0.pe7mz.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://news-microservices:daylabimat@cluster0.czj7s.mongodb.net/user-service?retryWrites=true&w=majority
 CLOUDINARY_NAME=huy-tran
 CLOUDINARY_API_KEY=956292983226845
 CLOUDINARY_API_SECRET=VTI6PyxD_rZokJAADMXxhaUBgHc
 JWT_SECRET =secret
+DEFAULT_IMAGE = http://res.cloudinary.com/huy-tran/image/upload/v1639639979/q0apb6l1a5gk2xiq2alo.jpg
