--- a/posts/.env
+++ b/posts/.env
@@ -1,3 +1,4 @@
 PORT=4000
 CONNECTION_STRING=mongodb+srv://news-microservices:daylabimat@cluster0.czj7s.mongodb.net/posts-service?retryWrites=true&w=majority
 KAFKA_URL=127.0.0.1:9092
+ACCESS_TOKEN_SECRET = secret
