--- a/posts/package.json
+++ b/posts/package.json
@@ -9,10 +9,16 @@
   "author": "Nhom 4",
   "license": "ISC",
   "dependencies": {
+    "brcypt": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "http-errors": "^1.8.1",
+    "joi": "^17.5.0",
+    "jsonwebtoken": "^8.5.1",
     "kafka-node": "^5.0.0",
     "mongoose": "^6.1.1",
-    "nodemon": "^2.0.15"
+    "mongoose-plugin-autoinc": "^1.1.9",
+    "nodemon": "^2.0.15",
+    "slugify": "^1.6.4"
   }
 }
