--- a/comments/.env
+++ b/comments/.env
@@ -1,2 +1,3 @@
 PORT=5000
 CONNECTION_STRING=mongodb+srv://news-microservices:daylabimat@cluster0.czj7s.mongodb.net/comments-service?retryWrites=true&w=majority
+JWT_SECRET = secret
