--- a/comments/package.json
+++ b/comments/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
     "kafka-node": "^5.0.0",
     "mongoose": "^6.1.1",
     "nodemon": "^2.0.15"
