feat: comments & query

--- a/comments/.env
+++ b/comments/.env
@@ -1,3 +1,4 @@
-PORT=5000
+PORT=8000
 CONNECTION_STRING=mongodb+srv://news-microservices:daylabimat@cluster0.czj7s.mongodb.net/comments-service?retryWrites=true&w=majority
-JWT_SECRET = secret
+JWT_SECRET=secret
+KAFKA_URL=127.0.0.1:9092
