finish authen and user

--- a/users/.env
+++ b/users/.env
@@ -4,3 +4,4 @@ CLOUDINARY_API_KEY=956292983226845
 CLOUDINARY_API_SECRET=VTI6PyxD_rZokJAADMXxhaUBgHc
 JWT_SECRET =secret
 DEFAULT_IMAGE = http://res.cloudinary.com/huy-tran/image/upload/v1639639979/q0apb6l1a5gk2xiq2alo.jpg
+KAFKA_URL = localhost:9092
