--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 services:
   zookeeper:
     image: 'bitnami/zookeeper:latest'
@@ -8,7 +8,6 @@ services:
       - ALLOW_ANONYMOUS_LOGIN=yes
   kafka:
     image: 'bitnami/kafka:latest'
-    container_name: 'kafka'
     ports:
       - '9092:9092'
     environment:
@@ -23,8 +22,8 @@ services:
     image: crawlerservice
     build:
       context: crawler
-      dockerfile: ./crawler/Dockerfile
+      dockerfile: ./Dockerfile
     environment:
       NODE_ENV: production
-    ports:
-      - 3000:3000
+    depends_on:
+      - kafka
