--- a/comments/package.json
+++ b/comments/package.json
@@ -9,6 +9,7 @@
   "author": "Nhom 4",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.14.0",
