fix: sync services

--- a/auth/package.json
+++ b/auth/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "kafka-node": "^5.0.0",
     "mongoose": "^6.1.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.15"
   }
 }
