--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "query": "cd query/ && npm run dev",
     "post": "cd posts/ && npm run dev",
     "crawler": "cd crawler/ && npm run dev",
-    "kafka": "docker start 000949026ebb && docker start 9942678ca3c8",
-    "start": "npm run kafka && sleep 5 && concurrently \"npm run query\" \"npm run post\" \"npm run crawler\" "
+    "user": "cd users/ && npm run dev",
+    "comment": "cd comments/ && npm run dev",
+    "auth": "cd auth/ && npm run dev",
+    "kafka": "docker start 05c261128f71 && docker start 261a53c3a902",
+    "start": "npm run kafka && sleep 5 && concurrently \"npm run query\" \"npm run post\" \"npm run crawler\" \"npm run user\" \"npm run auth\" \"npm run comment\" "
   },
   "repository": {
     "type": "git",
