--- a/users/package.json
+++ b/users/package.json
@@ -16,10 +16,12 @@
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
+    "kafka-node": "^5.0.0",
     "mongoose": "^6.1.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15",
     "passport": "^0.5.1",
     "passport-jwt": "^4.0.0"
   }
