--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "user": "cd users/ && npm run dev",
     "comment": "cd comments/ && npm run dev",
     "auth": "cd auth/ && npm run dev",
-    "kafka": "docker start 05c261128f71 && docker start 261a53c3a902",
-    "start": "npm run kafka && sleep 5 && concurrently \"npm run query\" \"npm run post\" \"npm run crawler\" \"npm run user\" \"npm run auth\" \"npm run comment\" "
+    "kafka": "docker start 933bc5dd2a83 && docker start d6a426c96bde",
+    "start": "npm run kafka && sleep 5 && concurrently \"npm run query\" \"npm run user\" \"npm run auth\" \"npm run comment\" "
   },
   "repository": {
     "type": "git",
