feat: google auth

--- a/auth/.env
+++ b/auth/.env
@@ -1,2 +1,6 @@
 JWT_SECRET = secret
 MONGO_URL = mongodb+srv://news-microservices:daylabimat@cluster0.czj7s.mongodb.net/user-service?retryWrites=true&w=majority
+KAFKA_URL = localhost:9092
+
+GOOGLE_CLIENT_ID=707494384451-n2h8k22labbk1hqo3abuen1i5kdp40dn.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=dSEJmh3sl8qIp_n3tHs9WbQr
