--- a/posts/package.json
+++ b/posts/package.json
@@ -19,6 +19,9 @@
     "kafka-node": "^5.0.0",
     "mongoose": "^6.1.1",
     "mongoose-plugin-autoinc": "^1.1.9",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "multiparty": "^4.2.2",
     "nodemon": "^2.0.15",
     "slugify": "^1.6.4"
   }
