--- a/posts/.env
+++ b/posts/.env
@@ -2,3 +2,6 @@ PORT=4000
 CONNECTION_STRING=mongodb+srv://news-microservices:daylabimat@cluster0.czj7s.mongodb.net/posts-service?retryWrites=true&w=majority
 KAFKA_URL=127.0.0.1:9092
 ACCESS_TOKEN_SECRET=secret
+CLOUDINARY_NAME=huy-tran
+CLOUDINARY_API_KEY=956292983226845
+CLOUDINARY_API_SECRET=VTI6PyxD_rZokJAADMXxhaUBgHc
