--- a/posts/package.json
+++ b/posts/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "brcypt": "^1.0.1",
+    "cloudinary": "^1.27.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
