--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "comment": "cd comments/ && npm run dev",
     "auth": "cd auth/ && npm run dev",
     "kafka": "docker start 933bc5dd2a83 && docker start d6a426c96bde",
-    "start": "npm run kafka && sleep 5 && concurrently \"npm run query\" \"npm run user\" \"npm run auth\" \"npm run comment\" "
+    "start": "concurrently \"npm run query\" \"npm run user\" \"npm run auth\" \"npm run comment\" "
   },
   "repository": {
     "type": "git",
