--- a/query/package.json
+++ b/query/package.json
@@ -14,11 +14,13 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "kafka-node": "^5.0.0",
     "mongoose": "^6.1.2",
     "mongoose-increment": "^2.0.0",
     "nodemon": "^2.0.15",
-    "slugify": "^1.6.4"
+    "slugify": "^1.6.4",
+    "socket.io": "^4.4.0"
   }
 }
