add redis and refresh token

--- a/auth/.env
+++ b/auth/.env
@@ -1,4 +1,5 @@
 JWT_SECRET = secret
+REFRESH_TOKEN_SECRET = refreshsecret
 MONGO_URL = mongodb+srv://news-microservices:daylabimat@cluster0.czj7s.mongodb.net/user-service?retryWrites=true&w=majority
 KAFKA_URL = localhost:9092
 
