--- a/query/package.json
+++ b/query/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.1.2",
     "mongoose-increment": "^2.0.0",
     "nodemon": "^2.0.15",
+    "redis": "^3.0.2",
     "slugify": "^1.6.4",
     "socket.io": "^4.4.0"
   }
