--- a/auth/package.json
+++ b/auth/package.json
@@ -15,10 +15,12 @@
     "express": "^4.17.1",
     "express-validator": "^6.14.0",
     "google-auth-library": "^7.11.0",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "kafka-node": "^5.0.0",
     "mongoose": "^6.1.2",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "redis": "^3.0.2"
   }
 }
